labs/ch7/second.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secondapp
  labels: 
    example: second
spec:
  #securityContext:
  #  runAsUser: 1000
  containers:
  - image: nginx
    name: webserver
    ports:
     - containerPort: 80
  - image: busybox
    name: busy
    command:
      - sleep
      - "3600"
    securityContext:
      runAsUser: 2000
      allowPrivilegeEscalation: false
    volumeMounts:
    - mountPath: /mypassword
      name: mypassword
  volumes:
  - name: mypassword
    secret:
      secretName: lfsecret
